force-app/main/default/objects/AI_Connection__c/AI_Connection__c.object-meta.xml
<CustomObject>
    <description>Required for BYOK customers. Will store information about the AI service, endpoint, connector class(interface class, if any), and ‘Named Credential’ name.</description>
    <label>AI Model</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>