force-app/main/default/objects/AI_Connection__c/fields/Additional_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Additional_Parameters__c</fullName>
    <label>Additional Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>