force-app/main/default/objects/AI_Connection__c/fields/AI_Response_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response Mapping</label>
    <referenceTo>AI_Response_Mapping__c</referenceTo>
    <relationshipLabel>AI Models</relationshipLabel>
    <relationshipName>AI_Models</relationshipName>
    <type>Lookup</type>
</CustomField>