force-app/main/default/objects/AI_Connection__c/fields/AI_Technology__c.field-meta.xml
<CustomField>
    <fullName>AI_Technology__c</fullName>
    <label>AI Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AnyAI_AnyPlatform</fullName>
                <label>Any AI. Any Platform.</label>
            </value>
            <value>
                <fullName>AWS_Comprehend</fullName>
                <label>AWS Comprehend</label>
            </value>
            <value>
                <fullName>BloombergGPT</fullName>
            </value>
            <value>
                <fullName>Claude</fullName>
            </value>
            <value>
                <fullName>Cohere_AI</fullName>
                <label>Cohere.AI</label>
            </value>
            <value>
                <fullName>Google_Vertex</fullName>
                <label>Google Vertex</label>
            </value>
            <value>
                <fullName>GPTfy</fullName>
            </value>
            <value>
                <fullName>OpenAI_Azure</fullName>
                <label>OpenAI / Azure</label>
            </value>
            <value>
                <fullName>OpenAI_ChatGPT</fullName>
                <label>OpenAI / ChatGPT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>