force-app/main/default/objects/AI_Connection__c/fields/Async_Request__c.field-meta.xml
<CustomField>
    <fullName>Async_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Async Request</label>
    <type>Checkbox</type>
</CustomField>