force-app/main/default/objects/AI_Connection__c/fields/Connector_Class__c.field-meta.xml
<CustomField>
    <fullName>Connector_Class__c</fullName>
    <description>Optional customer-created Apex interface class. If a value is provided here, GPTfy will use that to retrieve the token to call the customer-hosted AI service.</description>
    <label>Connector Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>