force-app/main/default/objects/AI_Connection__c/fields/Custom_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Custom_Metadata__c</fullName>
    <description>AzureGPT
CHATGPT</description>
    <label>Custom Metadata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AzureGPT</fullName>
            </value>
            <value>
                <fullName>CHATGPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>