force-app/main/default/objects/AI_Connection__c/fields/Enable_in_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Enable_in_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, GPTfy will call the AI services from Salesforce sandboxes also.</description>
    <label>Enable in Sandbox</label>
    <type>Checkbox</type>
</CustomField>