force-app/main/default/objects/AI_Connection__c/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon Web Service</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
            <value>
                <fullName>Open AI</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>