force-app/main/default/objects/AI_Connection__c/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <inlineHelpText>Maximum response token limit for this connection</inlineHelpText>
    <label>Max Output Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>