force-app/main/default/objects/AI_Connection__c/fields/Max_Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Tokens__c</fullName>
    <label>Max Total Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>