force-app/main/default/objects/AI_Connection__c/fields/Processing_Class__c.field-meta.xml
<CustomField>
    <fullName>Processing_Class__c</fullName>
    <label>Processing Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>