force-app/main/default/objects/AI_Connection__c/fields/Response_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Response_Mapping__c</fullName>
    <label>Response Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>