force-app/main/default/objects/AI_Connection__c/fields/Security_Layer__c.field-meta.xml
<CustomField>
    <fullName>Security_Layer__c</fullName>
    <label>Security Layer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPTfy</fullName>
                <default>true</default>
                <label>GPTfy</label>
            </value>
            <value>
                <fullName>Amazon Comprehend</fullName>
            </value>
            <value>
                <fullName>Azure Cognitive Service for Language</fullName>
            </value>
            <value>
                <fullName>Salesforce Einstein</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>