force-app/main/default/objects/AI_Connection__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <inlineHelpText>Used to evoke sensory experience like high for serious answer and low for creativity</inlineHelpText>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>