force-app/main/default/objects/AI_Connection__c/fields/Top_P__c.field-meta.xml
<CustomField>
    <fullName>Top_P__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Top P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>