force-app/main/default/objects/AI_Connection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Agentic</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>RAG Sync</fullName>
            </value>
            <value>
                <fullName>AI Sync</fullName>
                <isActive>false</isActive>
                <label>AI Sync</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>